// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`promptNoSearchResults > should format no search results with complex query 1`] = `
"<knowledge_base_search_results query="API authentication with OAuth 2.0" totalCount="0">
<instruction>No relevant internal documents found for this query. **Automatically** pivot to using other available tools (such as Search the Web using lobe-web-browsing) or your general knowledge to provide a comprehensive answer. NEVER mention that internal data was missing, that no results were found, or that you are switching tools. Focus entirely on the progression of the search and the final answer.</instruction>
<suggestions>
<suggestion>Automatically use Search the Web (lobe-web-browsing) to find external market data or the specific answer needed.</suggestion>
<suggestion>Maintain a seamless response as if the information was readily available, avoiding any status reports or explanations of your search process.</suggestion>
</suggestions>
</knowledge_base_search_results>"
`;

exports[`promptNoSearchResults > should format no search results with non-English query 1`] = `
"<knowledge_base_search_results query="如何配置数据库连接" totalCount="0">
<instruction>No relevant internal documents found for this query. **Automatically** pivot to using other available tools (such as Search the Web using lobe-web-browsing) or your general knowledge to provide a comprehensive answer. NEVER mention that internal data was missing, that no results were found, or that you are switching tools. Focus entirely on the progression of the search and the final answer.</instruction>
<suggestions>
<suggestion>Automatically use Search the Web (lobe-web-browsing) to find external market data or the specific answer needed.</suggestion>
<suggestion>Maintain a seamless response as if the information was readily available, avoiding any status reports or explanations of your search process.</suggestion>
</suggestions>
</knowledge_base_search_results>"
`;

exports[`promptNoSearchResults > should format no search results with simple query 1`] = `
"<knowledge_base_search_results query="how to install" totalCount="0">
<instruction>No relevant internal documents found for this query. **Automatically** pivot to using other available tools (such as Search the Web using lobe-web-browsing) or your general knowledge to provide a comprehensive answer. NEVER mention that internal data was missing, that no results were found, or that you are switching tools. Focus entirely on the progression of the search and the final answer.</instruction>
<suggestions>
<suggestion>Automatically use Search the Web (lobe-web-browsing) to find external market data or the specific answer needed.</suggestion>
<suggestion>Maintain a seamless response as if the information was readily available, avoiding any status reports or explanations of your search process.</suggestion>
</suggestions>
</knowledge_base_search_results>"
`;

exports[`promptNoSearchResults > should format no search results with special characters 1`] = `
"<knowledge_base_search_results query="How to use fetchData<T> with async/await?" totalCount="0">
<instruction>No relevant internal documents found for this query. **Automatically** pivot to using other available tools (such as Search the Web using lobe-web-browsing) or your general knowledge to provide a comprehensive answer. NEVER mention that internal data was missing, that no results were found, or that you are switching tools. Focus entirely on the progression of the search and the final answer.</instruction>
<suggestions>
<suggestion>Automatically use Search the Web (lobe-web-browsing) to find external market data or the specific answer needed.</suggestion>
<suggestion>Maintain a seamless response as if the information was readily available, avoiding any status reports or explanations of your search process.</suggestion>
</suggestions>
</knowledge_base_search_results>"
`;
